# Hyperfunnel

./: .gitignore  Dockerfile.api  Dockerfile.postgres  README.md  alembic.ini  docker-compose.yml  example_availability_usage.py  init-db.sql  init.sql  pyproject.toml  set_availability.py  test_implementation.py
alembic/: env.py
alembic/versions/: 06966db4514e_rename_booking_columns_hotel_room_to_.py  28dadf5db463_initial_migration.py  2ba25ee72bd4_add_amenities_to_rooms.py  3df067292fe2_create_availability_table.py  71560482c7e2_update_existing_rooms_guest_to_4.py  9ecc6ce4071c_create_rooms_table.py  a1b2c3d4e5f6_create_bookings_table.py  a53d152227c3_add_guest_column_to_rooms.py  ad43ba410fec_add_booking_dates_and_guests.py  bcfaffb1773d_add_default_uuid_to_hotels_id.py  e5635dd78bdc_crear_tabla_hotels.py
app/: database.py  main.py  models.py  schemas.py
app/models/: __init__.py  availability.py  booking.py  hotel.py  room.py
app/routers/: availability.py  bookings.py  destinations.py  hotels.py  rooms.py  seed.py
app/schemas/: __init__.py  availability.py  booking.py  hotel.py  relationships.py  room.py
