[project]
name = "hyperfunnel"
version = "0.1.0"
description = "Hyperfunnel FastAPI application"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.0",
    "uvicorn[standard]>=0.24.0",
    "alembic>=1.14.1",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
